fix windows-only browser overflow weird issue what the fuck i hate webdev

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -370,6 +370,8 @@ html, body {
 	margin: 0;
 	height: 100%;
 	line-height: 1.4;
+	max-width: 100%;
+	overflow-x: hidden;
 }
 
 body {
